# fastapi-prac

./: .env  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 556ae3b6cd9c_todo_schema.py
app/: app.py
app/configs/: app_config.py
app/consts/: todos.py
app/repositories/: db.py
app/repositories/schemas/: todo_db_schema.py
app/routes/: todo.py
app/schemas/: schema.py
